# mlx-diffusion

./: .gitignore  README.md  pyproject.toml  requirements.txt
examples/: txt2img.py
mlx_diffusion/: __init__.py  core.py  models.py  schedulers.py  tokenizer.py  txt2image.py  utils.py
mlx_diffusion/loaders/: unet.py
mlx_diffusion/models/: __init__.py  embeddings.py
mlx_diffusion/tokenizer/: __init__.py
mlx_diffusion/utils/: __init__.py  dummy_objects.py  environment.py
mlx_image/: component_loader.py  convert_weights.py  core.py  tokenizer.py
mlx_image/loaders/: stable_diffusion.py  utils.py
mlx_image/models/: activations.py
mlx_image/models/stable_diffusion/: __init__.py  loaders.py
mlx_image/models/stable_diffusion_xl/: mappings.py
mlx_image/pipelines/flux/: pipeline_mlx_output.py
mlx_image/pipelines/stable_diffusion/: pipeline_mlx_stable_diffusion.py
mlx_image/stable_diffusion/: model_io.py
mlx_image/utils/: dummy_objects.py  outputs.py
notebook/: test_diffusers.ipynb
